--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>
             This webpage is under maintenance. 
             But you can refer screenshots of previous webpage. 
-            <a href="">Click Here</a>
+            <a href="screenshots.html">Click Here</a>
         </h3>
     </div>
 </body>
